create awesome platformer game

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,1 +1,1 @@
-{"projects":[{"name":"bouncing-box","title":"Bouncing Box","description":"Click on the box to speed it up even faster ","date":"Monday, September 17, 2018"}]}
+{"projects":[{"name":"bouncing-box","title":"Bouncing Box","description":"Click on the box to speed it up even faster ","date":"Monday, September 17, 2018"},{"name":"platformer","title":"Platformer","description":"A cannon - dodging, collectible - grabbing adventure game for Halleb0t","date":"Monday, October 1, 2018"}]}
